--- a/src/schooltool/gradebook/locales/en_AU.po
+++ b/src/schooltool/gradebook/locales/en_AU.po
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: schooltool.gradebook\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2011-04-18 01:51+0300\n"
-"PO-Revision-Date: 2011-06-19 04:49+0000\n"
+"POT-Creation-Date: 2011-07-02 16:32+0300\n"
+"PO-Revision-Date: 2011-07-07 01:10+0000\n"
 "Last-Translator: Benny <benonsoftware@gmail.com>\n"
 "Language-Team: English (Australia) <en_AU@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-06-29 15:52+0000\n"
-"X-Generator: Launchpad (build 13299)\n"
+"X-Launchpad-Export-Date: 2011-07-08 04:52+0000\n"
+"X-Generator: Launchpad (build 13168)\n"
 "Language: en_AU\n"
 
 #: /src/schooltool/gradebook/activity.py:52
@@ -261,7 +261,15 @@ msgstr "Update Grades"
 msgid "Deploy Report Sheet"
 msgstr "Deploy Report Sheet"
 
-#: /src/schooltool/gradebook/browser/configure.zcml:569
+#: /src/schooltool/gradebook/browser/configure.zcml:539
+msgid "Hide Report Sheet"
+msgstr "Hide Report Sheet"
+
+#: /src/schooltool/gradebook/browser/configure.zcml:546
+msgid "Unhide Report Sheet"
+msgstr "Unhide Report Sheet"
+
+#: /src/schooltool/gradebook/browser/configure.zcml:598
 #: /src/schooltool/gradebook/browser/templates/layout_report_card.pt:13
 msgid "Report Card Layout"
 msgstr "Report Card Layout"
@@ -280,7 +288,15 @@ msgstr "Ave."
 msgid "Total"
 msgstr "Total"
 
-#: /src/schooltool/gradebook/browser/gradebook.py:210
+#: /src/schooltool/gradebook/browser/gradebook.py:83
+msgid "Abs."
+msgstr "Abs."
+
+#: /src/schooltool/gradebook/browser/gradebook.py:83
+msgid "Trd."
+msgstr "Trd."
+
+#: /src/schooltool/gradebook/browser/gradebook.py:195
 msgid ""
 "You have some changes that have not been saved.  Click OK to save now or "
 "CANCEL to continue without saving."
@@ -452,8 +468,7 @@ msgstr "Worksheet"
 
 #: /src/schooltool/gradebook/browser/report.zcml:8
 msgid "Contains scores from report sheets.  Formatted to be sent to parents."
-msgstr ""
-"Contains scores from report sheets.  Formatted to be sent to parents."
+msgstr "Contains scores from report sheets.  Formatted to be sent to parents."
 
 #: /src/schooltool/gradebook/browser/report.zcml:8
 msgid "Student Report Card"
@@ -484,26 +499,13 @@ msgstr "Group"
 
 #: /src/schooltool/gradebook/browser/report.zcml:35
 msgid "A single PDF containing detail reports for all students in the group."
-msgstr ""
-"A single PDF containing detail reports for all students in the group."
+msgstr "A single PDF containing detail reports for all students in the group."
 
 #: /src/schooltool/gradebook/browser/report.zcml:35
 msgid "Student Detail Report by Group"
 msgstr "Student Detail Report by Group"
 
-#: /src/schooltool/gradebook/browser/report.zcml:44
-msgid "Absences By Day"
-msgstr "Absences By Day"
-
-#: /src/schooltool/gradebook/browser/report.zcml:44
-msgid "Lists students absent on a given day."
-msgstr "Lists students absent on a given day."
-
-#: /src/schooltool/gradebook/browser/report.zcml:44
-msgid "School Year"
-msgstr "School Year"
-
-#: /src/schooltool/gradebook/browser/report.zcml:53
+#: /src/schooltool/gradebook/browser/report.zcml:45
 msgid "Failures by Term"
 msgstr "Failures by Term"
 
@@ -515,7 +517,19 @@ msgstr ""
 "Shows all students receiving failing scores in the selected report activity "
 "and term."
 
-#: /src/schooltool/gradebook/browser/report.zcml:62
+#: /src/schooltool/gradebook/browser/report.zcml:57
+msgid "Absences By Day"
+msgstr "Absences By Day"
+
+#: /src/schooltool/gradebook/browser/report.zcml:57
+msgid "Lists students absent on a given day."
+msgstr "Lists students absent on a given day."
+
+#: /src/schooltool/gradebook/browser/report.zcml:57
+msgid "School Year"
+msgstr "School Year"
+
+#: /src/schooltool/gradebook/browser/report.zcml:66
 msgid "Absences by Section"
 msgstr "Absences by Section"
 
@@ -820,7 +834,17 @@ msgstr "Classes you teach"
 msgid "Classes you attend"
 msgstr "Classes you attend"
 
-#: /src/schooltool/gradebook/browser/layout_report_card.pt:4
+#: /src/schooltool/gradebook/browser/templates/hide_report_worksheet.pt:4
+#: /src/schooltool/gradebook/browser/templates/hide_report_worksheet.pt:8
+msgid "Hide Deployed Report Sheet"
+msgstr "Hide Deployed Report Sheet"
+
+#: /src/schooltool/gradebook/browser/templates/hide_report_worksheet.pt:22
+#: /src/schooltool/gradebook/browser/templates/unhide_report_worksheet.pt:22
+msgid "Report Sheet"
+msgstr "Report Sheet"
+
+#: /src/schooltool/gradebook/browser/templates/layout_report_card.pt:4
 msgid "Layout Report Card"
 msgstr "Layout Report Card"
 
@@ -943,11 +967,11 @@ msgid ""
 "and choose \"3\" as the minimum passing grade. And click \"Download.\""
 msgstr ""
 "For example, say the term is \"Autumn 2011,\" and you have deployed a report "
-"sheet entitled \"Term Grades,\" which includes an activity \"First "
-"Quarter,\" using a grading scale where a \"3\" or higher is passing. To "
-"create a report of students failing the first quarter grade, you would "
-"select the report activity \"Autumn 2011 - Term Grades - First Quarter\" and "
-"choose \"3\" as the minimum passing grade. And click \"Download.\""
+"sheet entitled \"Term Grades,\" which includes an activity \"First Quarter,"
+"\" using a grading scale where a \"3\" or higher is passing. To create a "
+"report of students failing the first quarter grade, you would select the "
+"report activity \"Autumn 2011 - Term Grades - First Quarter\" and choose "
+"\"3\" as the minimum passing grade. And click \"Download.\""
 
 #: /src/schooltool/gradebook/browser/templates/request_failing_report.pt:38
 msgid "Request Report"
@@ -965,7 +989,13 @@ msgstr "Term or Year"
 msgid "Section Worksheet Summary"
 msgstr "Section Worksheet Summary"
 
-#: /src/schooltool/gradebook/browser/templates/unhide_worksheets.pt:28
+#: /src/schooltool/gradebook/browser/templates/unhide_report_worksheet.pt:4
+#: /src/schooltool/gradebook/browser/templates/unhide_report_worksheet.pt:8
+msgid "Unhide Deployed Report Sheet"
+msgstr "Unhide Deployed Report Sheet"
+
+#: /src/schooltool/gradebook/browser/templates/unhide_report_worksheet.pt:39
+#: /src/schooltool/gradebook/browser/templates/unhide_worksheets.pt:27
 msgid "Unhide"
 msgstr "Unhide"
 
@@ -1018,10 +1048,6 @@ msgstr "Delete"
 #: /src/schooltool/gradebook/browser/worksheet.py:100
 msgid "This worksheet has no activities."
 msgstr "This worksheet has no activities."
-
-#: /src/schooltool/gradebook/configure.zcml:302
-msgid "Gradebook API"
-msgstr "Gradebook API"
 
 #: /src/schooltool/gradebook/gradebook_init.py:49
 msgid "Deployed Report Sheets"
@@ -1181,6 +1207,14 @@ msgstr "Linked Column Activity Source"
 #: /src/schooltool/gradebook/interfaces.py:415
 msgid "A text string that specifies the source of the column"
 msgstr "A text string that specifies the source of the column"
+
+#: /src/schooltool/gradebook/journal.py:46
+msgid "Journal Source"
+msgstr "Journal Source"
+
+#: /src/schooltool/gradebook/journal.py:64
+msgid "Journal Average"
+msgstr "Journal Average"
 
 #: /src/schooltool/gradebook/security.zcml:10
 msgid "Create, edit and deploy report sheet templates."
