--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,10 +2,10 @@
 CHANGES
 =======
 
-0.9.2 (unreleased)
+0.9.2 (2011-09-22)
 ------------------
 
-- Nothing changed yet.
+- Updated translations.
 
 
 0.9.1 (2011-07-04)
