--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 CHANGES
 =======
 
+1.9.1 (unreleased)
+------------------
+
+- Work continues in flourish branch.
+
+
 1.9.0 (2011-09-22)
 ------------------
 
